src/test/deca/syntax/valid/parser/assign_multiple_var.deca
// Déclare plusieurs variables sur une seule ligne
{
  int x, y = 1;
}
