src/test/deca/syntax/invalid/parser/no_new_line_declaration_wrong.deca
// Deux déclarations de la variable x sur la même ligne
{
  int x = 1; int x = 2;
}
